--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,32 +7,49 @@
     font-family: inherit;
 }
 
+a:link,
+a:visited,
+button {
+    cursor: pointer;
+}
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
     // 1rem = 16px = 100%
     // So 10px = 1000/16 = 62.5%
+    @include mediaQuery($desktop) {
+        font-size: 80%;
+    }
+    @include mediaQuery($tab) {
+        font-size: 55%;
+    }
+    @include mediaQuery($mobile) {
+        font-size: 50%;
+    }
 }
 
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 8px;
     background-color: $color-primary-back;
 }
 
 ::-webkit-scrollbar-thumb {
-    width: 6px;
-    height: 100px;
-    background: $color-secondary-text;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.221);
+    border: 2px solid $color-primary-back;
 }
 
 body {
-    height: 100vh;
     box-sizing: border-box;
     font-family: "Nunito", "sans-serif";
     font-weight: 400;
     background-color: $color-primary-back;
     color: $color-primary-text;
     font-size: 1.6rem;
+    letter-spacing: 0.5px;
+    position: relative;
+    z-index: -1;
 }
 
 ul li {
