--- a/sass/abstract/_abstract.scss
+++ b/sass/abstract/_abstract.scss
@@ -3,11 +3,29 @@ $color-primary-back-light: #092530;
 $color-primary-back: #011213;
 $color-primary-text: #2dd6b2;
 $color-secondary-text: #f94c66;
-
-$color-secondary-back-1: #1dcb5a;
 $color-secondary-back-2: #20df63;
 
-$border-1px: 1px solid $color-secondary-back-1;
+// Media Query
+// mobile - 600px - 37.5em
+// tab - 860px - 53.75em
+// tab big screen - 1100px 68.75em
+// desktop - 1500px 81.25em
+$mobile: 37.5em;
+$tab: 56.25em;
+$ipad: 68.75em;
+$desktop: 93.75em;
+
+@mixin mediaQuery($condition) {
+    @if $condition == $desktop {
+        @media only screen and (min-width: $condition) {
+            @content;
+        }
+    } @else {
+        @media only screen and (max-width: $condition) {
+            @content;
+        }
+    }
+}
 
 .u-margin-bottom-sm {
     margin-bottom: 2rem;
@@ -20,4 +38,28 @@ $border-1px: 1px solid $color-secondary-back-1;
 }
 .u-margin-bottom-hg {
     margin-bottom: 8rem;
+}
+
+.sticky-nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 7;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
+    @include mediaQuery($tab) {
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: 0;
+        backdrop-filter: none;
+        -webkit-backdrop-filter: none;
+    }
+}
+
+.centered {
+    padding: 1.5rem 3rem 0 3rem;
+    text-align: center;
+    font-size: 1.8rem;
 }
