--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,11 +1,20 @@
 .cta-btn {
-    transition: all 0.5s;
+    display: inline-block;
+    transition: color, border, box-shadow 0.5s;
     padding: 0.6rem 1.5rem;
-    border: 1px solid transparent;
+    border: 2px solid $color-secondary-text;
     border-radius: 5px;
+    box-shadow: inset 0 0 5px $color-secondary-text;
 
     &:hover {
-        border: 1px solid $color-primary-text;
+        color: $color-secondary-text;
+        border: 2px solid $color-primary-text;
+        box-shadow: inset 0 0 8px $color-primary-text;
+    }
+
+    &:active {
+        box-shadow: inset 0 0 15px $color-primary-text;
+        transform: scale(0.95);
     }
 }
 .special-btn {
@@ -14,6 +23,7 @@
     transition: all 0.3s;
     padding: 1rem 3rem;
     text-transform: uppercase;
+    animation: fall 1s ease-in-out;
 
     &:hover {
         transform: translateY(-0.5rem);
