--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "abstract/abstract";
 @import "abstract/mixins";
+@import "abstract/animations";
 @import "base/base";
 @import "components/button";
 @import "components/card";
