--- a/views/base.pug
+++ b/views/base.pug
@@ -10,9 +10,10 @@ html(lang="en")
         // External Scripts starts
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-        link(href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet")
-        link(rel="stylesheet" href="/css/style.min.css")
-        script(src="/js/main.js" defer)
+        link(href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet")
+        link(rel="preconnect" href="/")
+        link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
+        link(rel="stylesheet" href="/css/style.min.css" defer)
         // External Scripts ends
     body
         include includes/_header
@@ -20,3 +21,4 @@ html(lang="en")
         block content
 
         include includes/_footer
+        script(src="/js/main.min.js" defer async)
