--- a/views/base.pug
+++ b/views/base.pug
@@ -3,7 +3,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
-        meta(name="description" content="Hi There. I am krishnaprasanth and this is my PortFolio (Resume).")
+        meta(name="description" content="Hi There. I am krishnaprasanth and this is my PortFolio.")
         meta(name="keywords", content="krishnaprasanth, krishnaprasanth D V, krishnaprasanth DSK, BeastDSK, Krishnaprasanth PortFolio, KrishnaDSK Port Folio, KrishnaDSK, Krishnaprasanth D V Port Folio")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title Krishnaprasanth D V
@@ -11,9 +11,9 @@ html(lang="en")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet")
-        link(rel="preconnect" href="/")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
-        link(rel="stylesheet" href="/css/style.min.css" defer)
+        link(rel="stylesheet" href="/css/style.min.css")
+        script(src="/js/main.min.js" defer)
         // External Scripts ends
     body
         include includes/_header
@@ -21,4 +21,3 @@ html(lang="en")
         block content
 
         include includes/_footer
-        script(src="/js/main.min.js" defer async)
