--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -20,13 +20,23 @@
             top: 0;
             right: 0;
             transform: translateX(100rem);
-            backdrop-filter: blur(0);
+            @supports not (backdrop-filter: blur(0px)) {
+                background: rgba(0, 0, 0, 0.1);
+            }
+            @supports (backdrop-filter: blur(0px)) {
+                backdrop-filter: blur(0px);
+            }
             transition: all 0.5s;
         }
         &-active {
             height: 100vh;
             width: 100vw;
-            backdrop-filter: blur(8px);
+            @supports not (backdrop-filter: blur(0px)) {
+                background: rgba(0, 0, 0, 0.6);
+            }
+            @supports (backdrop-filter: blur(0px)) {
+                backdrop-filter: blur(8px);
+            }
             z-index: 4;
             transform: translateX(0rem);
         }
