--- a/views/includes/_footer.pug
+++ b/views/includes/_footer.pug
@@ -1,4 +1,4 @@
 footer.footer
-    p.footer-text.u-margin-bottom-sm Designed & Build by 
+    p.footer-text.u-margin-bottom-sm Designed & Built by 
         span Krishnaprasanth DSK
     p.footer-text.u-margin-bottom-sm &copy; 2021 - 2022 Rights Reservered.
