--- a/views/index.pug
+++ b/views/index.pug
@@ -35,8 +35,8 @@ block content
                 span .I am a Full-stack Web developer. 
             p.text.u-margin-bottom-sm I started my career in 2020. Currently I am working in
                 a(href="https://www.tcs.com" target="_blank" aria-label="Tata Consultancy Services Home page").highlight  Tata Consultancy Services
-                span (Java & Oracle SQL Developer). And also doing a Blog Application and a Web based Text Editor project side-by-side (Personal). Wish me Luck 🙂.
-            p.text I am interested in Learning new stuff, Writing Stories, watching Anime, Cricket and Football.
+                span (NodeJS Backend Developer). I am responsible for creating API's, getting the client requirement, Servers, DB operations etc.
+            p.text My Hobbies are writing stories, watching Anime, Cricket and Football.
 
         section.section-projects.u-margin-bottom-hg#projects
             h3.heading-tertiary.u-margin-bottom-md Recent projects
